--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -62,14 +62,18 @@
                             <div class="field">
                                 <label class="label is-size-5" for="review">Leave a review</label>
                                 <div class="control">
-                                    <textarea class="textarea" placeholder="What were some things you enjoyed about this experience? How can it be improved?" id="review" name="review"></textarea>
+                                    <textarea class="textarea"
+                                              placeholder="What were some things you enjoyed about this experience? How can it be improved?"
+                                              id="review" name="review"></textarea>
                                 </div>
                             </div>
 
                             <div class="field">
                                 <label class="label" for="review-submit"></label>
                                 <div class="control">
-                                    <button id="review-submit" name="review-submit" class="button is-success is-medium is-fullwidth">Submit your review!</button>
+                                    <button id="review-submit" name="review-submit"
+                                            class="button is-success is-medium is-fullwidth">Submit your review!
+                                    </button>
                                 </div>
                             </div>
                         </fieldset>
