--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,13 +17,15 @@
                     <div class="profile-img-onprofile" style="background-image: url('/pfp.jpg');"></div>
                     <br>
                     <p class="title is-5 is-spaced">HidethePain</p>
-                    <p class="subtitle is-6">I am a certified tour guide with fluent English and I specialise in food tours.
+                    <p class="subtitle is-6">I am a certified tour guide with fluent English and I specialise in food
+                        tours.
                     </p>
                     <span class="tag is-success">Verified</span>
                 </div>
                 <div class="box is-centered">
                     <p class="title is-6"><strong>Description</strong></p>
-                    <p class="subtitle is-6 pb-4">I am a certified tour guide with fluent English and I specialise in food tours.</p>
+                    <p class="subtitle is-6 pb-4">I am a certified tour guide with fluent English and I specialise in
+                        food tours.</p>
 
                     <p class="title is-6"><strong>Languages</strong></p>
                     <p class="subtitle is-6">English</p>
@@ -48,7 +50,8 @@
                             </div>
                             <h1 class='title is-4'>Bishan Nightlife</h1>
                             <p class="subtitle is-6">Explore the night life of Bishan</p>
-                            <p class="has-text-weight-light is-size-3 has-text-dark"><small class="is-size-5">From</small>
+                            <p class="has-text-weight-light is-size-3 has-text-dark"><small
+                                    class="is-size-5">From</small>
                                 $100
                             </p>
                             <br>
@@ -73,13 +76,15 @@
                             </div>
                             <h1 class='title is-4'>Bishan Nightlife</h1>
                             <p class="subtitle is-6">Explore the night life of Bishan</p>
-                            <p class="has-text-weight-light is-size-3 has-text-dark"><small class="is-size-5">From</small>
+                            <p class="has-text-weight-light is-size-3 has-text-dark"><small
+                                    class="is-size-5">From</small>
                                 $100
                             </p>
                             <br>
                         </div>
                         <div class="buttons">
-                            <a class="button is-white" style="color:rgb(226, 48, 78)"><i class="fas fa-heart-broken"></i>&ensp;Remove from wishlist</a>
+                            <a class="button is-white" style="color:rgb(226, 48, 78)"><i
+                                    class="fas fa-heart-broken"></i>&ensp;Remove from wishlist</a>
                             <a class="button is-white has-text-primary"><i class="fas fa-arrow-right"></i>&ensp;Book now</a>
                         </div>
                     </div>
@@ -97,7 +102,8 @@
                             </div>
                             <h1 class='title is-4'>Bishan Nightlife</h1>
                             <p class="subtitle is-6">Explore the night life of Bishan</p>
-                            <p class="has-text-weight-light is-size-3 has-text-dark"><small class="is-size-5">From</small>
+                            <p class="has-text-weight-light is-size-3 has-text-dark"><small
+                                    class="is-size-5">From</small>
                                 $100
                             </p>
                             <br>
