--- a/templates/setting.html
+++ b/templates/setting.html
@@ -86,7 +86,8 @@
                             <div class="field">
                                 <label class="label" for="user-submit"></label>
                                 <div class="control">
-                                    <input type='submit' value='Update!' id="user-submit" name="user-submit" class="button is-success">
+                                    <input type='submit' value='Update!' id="user-submit" name="user-submit"
+                                           class="button is-success">
                                 </div>
                             </div>
 
