--- a/public/css/discover.css
+++ b/public/css/discover.css
@@ -1,6 +1,6 @@
 #discover-hero {
     background: url("/imgs/discover.jpg") center scroll no-repeat;
     background-size: cover;
-    background-color: rgba(0,0,0,0.55);
+    background-color: rgba(0, 0, 0, 0.55);
     background-blend-mode: overlay;
 }
