--- a/templates/base.html
+++ b/templates/base.html
@@ -3,25 +3,25 @@
 
 <head>
     {% block head %}
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tourisit - Tours by locals.</title>
-    <link rel="stylesheet" href="/css/bulma.min.css">
-    <link rel="stylesheet" href="/css/navbar.css">
-    <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/@creativebulma/bulma-tooltip@1.2.0/dist/bulma-tooltip.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
-        crossorigin="anonymous" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/turbolinks/5.2.0/turbolinks.js"
-        integrity="sha512-G3jAqT2eM4MMkLMyQR5YBhvN5/Da3IG6kqgYqU9zlIH4+2a+GuMdLb5Kpxy6ItMdCfgaKlo2XFhI0dHtMJjoRw=="
-        crossorigin="anonymous"></script>
-    <script>
-        Turbolinks.start()
-    </script>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Tourisit - Tours by locals.</title>
+        <link rel="stylesheet" href="/css/bulma.min.css">
+        <link rel="stylesheet" href="/css/navbar.css">
+        <link rel="stylesheet"
+              href="https://cdn.jsdelivr.net/npm/@creativebulma/bulma-tooltip@1.2.0/dist/bulma-tooltip.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+              integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+              crossorigin="anonymous"/>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+                integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+                crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/turbolinks/5.2.0/turbolinks.js"
+                integrity="sha512-G3jAqT2eM4MMkLMyQR5YBhvN5/Da3IG6kqgYqU9zlIH4+2a+GuMdLb5Kpxy6ItMdCfgaKlo2XFhI0dHtMJjoRw=="
+                crossorigin="anonymous"></script>
+        <script>
+            Turbolinks.start()
+        </script>
     {% endblock %}
 
     {% block scripts %}
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-    {% block nav %}
+{% block nav %}
 
 
     <nav class="navbar is-black is-fixed-top" role="navigation" aria-label="main navigation">
@@ -49,23 +49,25 @@
                     <a class="navbar-item" href="/">
                         Home
                     </a>
-                    <a class="navbar-item" href="{{url_for('market')}}">
+                    <a class="navbar-item" href="{{ url_for('market') }}">
                         Discover
                     </a>
-                    <a class="navbar-item" href="{{url_for('support')}}">
+                    <a class="navbar-item" href="{{ url_for('support') }}">
                         Support
                     </a>
                 </div>
 
 
                 <div class="navbar-end">
-                    <a class="navbar-item has-text-primary-dark" href="{{url_for('sellerDashboard')}}">
+                    <a class="navbar-item has-text-primary-dark" href="{{ url_for('sellerDashboard') }}">
                         <i class="fas fa-arrow-right"></i>&ensp;Tour Guide mode
                     </a>
-                    <a class="navbar-item has-tooltip-arrow has-tooltip-bottom" data-tooltip="Your Bookings" href="{{url_for('all_bookings')}}">
+                    <a class="navbar-item has-tooltip-arrow has-tooltip-bottom" data-tooltip="Your Bookings"
+                       href="{{ url_for('all_bookings') }}">
                         <i class="fas fa-bookmark"></i>
                     </a>
-                    <a class="navbar-item has-tooltip-arrow has-tooltip-bottom" data-tooltip="Your Wishlist" href="{{url_for('favourites')}}">
+                    <a class="navbar-item has-tooltip-arrow has-tooltip-bottom" data-tooltip="Your Wishlist"
+                       href="{{ url_for('favourites') }}">
                         <i class="fas fa-heart"></i>
                     </a>
                     <div class="navbar-item has-dropdown is-hoverable">
@@ -78,13 +80,13 @@
                                 <p class="has-text-weight-bold">Logged in as</p>
                                 <p>HidethePain</p>
                             </div>
-                            <a class="navbar-item" href="{{url_for('profile')}}">
+                            <a class="navbar-item" href="{{ url_for('profile') }}">
                                 Your profile
                             </a>
-                            <a class="navbar-item" href='{{url_for("all_bookings")}}'>
+                            <a class="navbar-item" href='{{ url_for("all_bookings") }}'>
                                 Your bookings
                             </a>
-                            <a class="navbar-item" href='{{url_for("accountinfo")}}'>
+                            <a class="navbar-item" href='{{ url_for("accountinfo") }}'>
                                 Account settings
                             </a>
                             <hr class="navbar-divider">
@@ -94,7 +96,6 @@
                         </div>
                     </div>
                 </div>
-
 
 
                 <!-- <div class="navbar-end">
@@ -115,10 +116,10 @@
         </div>
     </nav>
 
-    {% endblock %}
+{% endblock %}
 
-    {% block content %}
-    {% endblock%}
+{% block content %}
+{% endblock %}
 </body>
 
 </html>
