--- a/templates/customer/favourites.html
+++ b/templates/customer/favourites.html
@@ -1,103 +1,109 @@
 {% extends 'base.html' %}
 
 {% block scripts %}
-<link rel="stylesheet" href="/css/shop.css">
+    <link rel="stylesheet" href="/css/shop.css">
 {% endblock %}
 
 
 
 {% block content %}
-<section id="discover-hero" class="hero is-medium is-link is-bold">
-    <div class="hero-body">
-        <div class="container has-text-centered">
-            <h1 class="title has-text-weight-bold" style="font-size: 3rem;">
-                Favourite   <i class="fas fa-heart"></i>
-            </h1>
-            <h2 class="subtitle is-size-4">
-                Trips on your To Do list
-            </h2>
+    <section id="discover-hero" class="hero is-medium is-link is-bold">
+        <div class="hero-body">
+            <div class="container has-text-centered">
+                <h1 class="title has-text-weight-bold" style="font-size: 3rem;">
+                    Favourite <i class="fas fa-heart"></i>
+                </h1>
+                <h2 class="subtitle is-size-4">
+                    Trips on your To Do list
+                </h2>
+            </div>
+            <br>
         </div>
-        <br>
-    </div>
-</section>
+    </section>
 
 
-<section class="section">
-    <div class="container">
-        <div class="columns">
-            <div class="column">
-                <!-- START: Vertical Card -->
-                <div class='box p-5 vertical'>
-                    <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
-                    <div class="ml-4">
-                        <div class="mb-2 listing-author">
-                            <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                            <div class="ml-2"><b>HidethePain</b> is offering:</div>
+    <section class="section">
+        <div class="container">
+            <div class="columns">
+                <div class="column">
+                    <!-- START: Vertical Card -->
+                    <div class='box p-5 vertical'>
+                        <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
+                        <div class="ml-4">
+                            <div class="mb-2 listing-author">
+                                <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
+                                <div class="ml-2"><b>HidethePain</b> is offering:</div>
+                            </div>
+                            <h1 class='title is-4'>Bishan Nightlife</h1>
+                            <p class="subtitle is-6">Explore the night life of Bishan</p>
+                            <p class="has-text-weight-light is-size-3 has-text-dark"><small
+                                    class="is-size-5">From</small>
+                                $100
+                            </p>
+                            <br>
                         </div>
-                        <h1 class='title is-4'>Bishan Nightlife</h1>
-                        <p class="subtitle is-6">Explore the night life of Bishan</p>
-                        <p class="has-text-weight-light is-size-3 has-text-dark"><small class="is-size-5">From</small>
-                            $100
-                        </p>
-                        <br>
-                    </div>
-                    <div class="buttons">
-                        <a class="button is-white" style="color:rgb(226, 48, 78)"><i class="fas fa-heart-broken"></i>&ensp;Remove
-                            from wishlist</a>
-                        <a class="button is-white has-text-primary"><i class="fas fa-arrow-right"></i>&ensp;Book now</a>
-                    </div>
-                </div>
-                <!-- END: Vertical Card -->
-            </div>
-            <div class="column">
-                <!-- START: Vertical Card -->
-                <div class='box p-5 vertical'>
-                    <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
-                    <div class="ml-4">
-                        <div class="mb-2 listing-author">
-                            <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                            <div class="ml-2"><b>HidethePain</b> is offering:</div>
+                        <div class="buttons">
+                            <a class="button is-white" style="color:rgb(226, 48, 78)"><i
+                                    class="fas fa-heart-broken"></i>&ensp;Remove
+                                from wishlist</a>
+                            <a class="button is-white has-text-primary"><i class="fas fa-arrow-right"></i>&ensp;Book now</a>
                         </div>
-                        <h1 class='title is-4'>Bishan Nightlife</h1>
-                        <p class="subtitle is-6">Explore the night life of Bishan</p>
-                        <p class="has-text-weight-light is-size-3 has-text-dark"><small class="is-size-5">From</small>
-                            $100
-                        </p>
-                        <br>
                     </div>
-                    <div class="buttons">
-                        <a class="button is-white" style="color:rgb(226, 48, 78)"><i class="fas fa-heart-broken"></i>&ensp;Remove
-                            from wishlist</a>
-                        <a class="button is-white has-text-primary"><i class="fas fa-arrow-right"></i>&ensp;Book now</a>
-                    </div>
+                    <!-- END: Vertical Card -->
                 </div>
-                <!-- END: Vertical Card -->
-            </div>
-            <div class="column">
-                <!-- START: Vertical Card -->
-                <div class='box p-5 vertical'>
-                    <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
-                    <div class="ml-4">
-                        <div class="mb-2 listing-author">
-                            <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                            <div class="ml-2"><b>HidethePain</b> is offering:</div>
+                <div class="column">
+                    <!-- START: Vertical Card -->
+                    <div class='box p-5 vertical'>
+                        <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
+                        <div class="ml-4">
+                            <div class="mb-2 listing-author">
+                                <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
+                                <div class="ml-2"><b>HidethePain</b> is offering:</div>
+                            </div>
+                            <h1 class='title is-4'>Bishan Nightlife</h1>
+                            <p class="subtitle is-6">Explore the night life of Bishan</p>
+                            <p class="has-text-weight-light is-size-3 has-text-dark"><small
+                                    class="is-size-5">From</small>
+                                $100
+                            </p>
+                            <br>
                         </div>
-                        <h1 class='title is-4'>Bishan Nightlife</h1>
-                        <p class="subtitle is-6">Explore the night life of Bishan</p>
-                        <p class="has-text-weight-light is-size-3 has-text-dark"><small class="is-size-5">From</small>
-                            $100
-                        </p>
-                        <br>
+                        <div class="buttons">
+                            <a class="button is-white" style="color:rgb(226, 48, 78)"><i
+                                    class="fas fa-heart-broken"></i>&ensp;Remove
+                                from wishlist</a>
+                            <a class="button is-white has-text-primary"><i class="fas fa-arrow-right"></i>&ensp;Book now</a>
+                        </div>
                     </div>
-                    <div class="buttons">
-                        <a class="button is-white" style="color:rgb(226, 48, 78)"><i class="fas fa-heart-broken"></i>&ensp;Remove
-                            from wishlist</a>
-                        <a class="button is-white has-text-primary"><i class="fas fa-arrow-right"></i>&ensp;Book now</a>
-                    </div>
+                    <!-- END: Vertical Card -->
                 </div>
-                <!-- END: Vertical Card -->
+                <div class="column">
+                    <!-- START: Vertical Card -->
+                    <div class='box p-5 vertical'>
+                        <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
+                        <div class="ml-4">
+                            <div class="mb-2 listing-author">
+                                <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
+                                <div class="ml-2"><b>HidethePain</b> is offering:</div>
+                            </div>
+                            <h1 class='title is-4'>Bishan Nightlife</h1>
+                            <p class="subtitle is-6">Explore the night life of Bishan</p>
+                            <p class="has-text-weight-light is-size-3 has-text-dark"><small
+                                    class="is-size-5">From</small>
+                                $100
+                            </p>
+                            <br>
+                        </div>
+                        <div class="buttons">
+                            <a class="button is-white" style="color:rgb(226, 48, 78)"><i
+                                    class="fas fa-heart-broken"></i>&ensp;Remove
+                                from wishlist</a>
+                            <a class="button is-white has-text-primary"><i class="fas fa-arrow-right"></i>&ensp;Book now</a>
+                        </div>
+                    </div>
+                    <!-- END: Vertical Card -->
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 {% endblock %}
