--- a/templates/customer/marketplace.html
+++ b/templates/customer/marketplace.html
@@ -1,150 +1,153 @@
 {% extends 'base.html' %}
 
 {% block scripts %}
-<link rel="stylesheet" href="/css/shop.css">
-<link rel="stylesheet" href="/css/discover.css">
-<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script>
+    <link rel="stylesheet" href="/css/shop.css">
+    <link rel="stylesheet" href="/css/discover.css">
+    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script>
 
-    function liveSearch(value){
-        value = value.trim(); // remove any spaces around the text
-        if(value != ""){ // don't make requests with an empty string
-            $.ajax({
-                url: "/search",
-                data: {searchListing: value},
-                dataType: "json",
-                success: function(data){
-                    var res = "";
-                    for(i in data.results){
-                        res += "<div>"+data.results[i]+"</div>";
+        function liveSearch(value) {
+            value = value.trim(); // remove any spaces around the text
+            if (value != "") { // don't make requests with an empty string
+                $.ajax({
+                    url: "/search",
+                    data: {searchListing: value},
+                    dataType: "json",
+                    success: function (data) {
+                        var res = "";
+                        for (i in data.results) {
+                            res += "<div>" + data.results[i] + "</div>";
+                        }
+                        $("#results").html(res);
                     }
-                    $("#results").html(res);
-                }
 
-            });
+                });
+            } else {
+                $("#results").html(""); // set the results empty in case of empty string
+            }
         }
-        else{
-            $("#results").html(""); // set the results empty in case of empty string
-        }
-    }
 
-</script>
+    </script>
 {% endblock %}
 
 {% block content %}
 
-<section id="discover-hero" class="hero is-medium is-black">
-    <div class="hero-body">
-        <div class="container has-text-centered">
-            <h1 class="title has-text-weight-bold" style="font-size: 3rem;">
-                Discover
-            </h1>
-            <h2 class="subtitle is-size-4">
-                There's always a trip for everyone
-            </h2>
-        </div>
-        <br>
-        <div class="searchbar">
-            <div class="field has-addons">
-                <div class="control is-expanded">
-                    <input id="searchReq" class="input is-fullwidth" type="text" placeholder="Look for a tour" onkeyup="liveSearch(this.value)">
-                </div>
-                <div class="control">
-                    <button class="button is-danger">
-                        Search
-                    </button>
-                    <button class="button is-danger">
-                        <i class="fas fa-dice"></i>
-                    </button>
+    <section id="discover-hero" class="hero is-medium is-black">
+        <div class="hero-body">
+            <div class="container has-text-centered">
+                <h1 class="title has-text-weight-bold" style="font-size: 3rem;">
+                    Discover
+                </h1>
+                <h2 class="subtitle is-size-4">
+                    There's always a trip for everyone
+                </h2>
+            </div>
+            <br>
+            <div class="searchbar">
+                <div class="field has-addons">
+                    <div class="control is-expanded">
+                        <input id="searchReq" class="input is-fullwidth" type="text" placeholder="Look for a tour"
+                               onkeyup="liveSearch(this.value)">
+                    </div>
+                    <div class="control">
+                        <button class="button is-danger">
+                            Search
+                        </button>
+                        <button class="button is-danger">
+                            <i class="fas fa-dice"></i>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-</section>
+    </section>
 
-<section class='section'>
-    <div class='container'>
-        <div class="dropdown is-hoverable is-pulled-right">
-            <div class="dropdown-trigger">
-                <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
-                    <span>Filter By:</span>
-                    <span class="icon is-small">
+    <section class='section'>
+        <div class='container'>
+            <div class="dropdown is-hoverable is-pulled-right">
+                <div class="dropdown-trigger">
+                    <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
+                        <span>Filter By:</span>
+                        <span class="icon is-small">
                         <i class="fas fa-angle-down" aria-hidden="true"></i>
                     </span>
-                </button>
-            </div>
-            <div class="dropdown-menu" id="dropdown-menu" role="menu">
-                <div class="dropdown-content">
-                    <a href="#" class="dropdown-item">
-                        Highest Relevance
-                    </a>
-                    <a href="#" class="dropdown-item">
-                        Highest Rating
-                    </a>
-                    <a href="#" class="dropdown-item">
-                        Newest Listings
-                    </a>  
-                    <a class="dropdown-item">
-                        Closest Proximity
-                    </a>                  
-                    <a href="#" class="dropdown-item">
-                        Lowest to Highest Price
-                    </a>
-                    <a class="dropdown-item">
-                        Highest to Lowest Price
-                    </a>
+                    </button>
+                </div>
+                <div class="dropdown-menu" id="dropdown-menu" role="menu">
+                    <div class="dropdown-content">
+                        <a href="#" class="dropdown-item">
+                            Highest Relevance
+                        </a>
+                        <a href="#" class="dropdown-item">
+                            Highest Rating
+                        </a>
+                        <a href="#" class="dropdown-item">
+                            Newest Listings
+                        </a>
+                        <a class="dropdown-item">
+                            Closest Proximity
+                        </a>
+                        <a href="#" class="dropdown-item">
+                            Lowest to Highest Price
+                        </a>
+                        <a class="dropdown-item">
+                            Highest to Lowest Price
+                        </a>
 
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
 
 
-<section class="section">
-    <div class="container">
+    <section class="section">
+        <div class="container">
 
             <div class="section">
                 <div class="has-text-info" id="results"></div>
             </div>
 
-        <div class="columns is-multiline">
+            <div class="columns is-multiline">
 
-            {% for item in listings %}
-            <div class="column is-one-third">
-                <!-- START: Vertical Card -->
-                <a href='/discover/{{ item["_id"] }}'>
-                    <div class='p-5 vertical'>
-                        <div class="box listing-img" style="background-image: url('data:image/jpeg;base64, {{ item['tour_img'] }}') ;"></div>
-                        <div class="ml-4">
-                            <div class="mb-2 listing-author">
-                                <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                                <div class="ml-2"><b>HidethePain</b> is offering:</div>
+                {% for item in listings %}
+                    <div class="column is-one-third">
+                        <!-- START: Vertical Card -->
+                        <a href='/discover/{{ item["_id"] }}'>
+                            <div class='p-5 vertical'>
+                                <div class="box listing-img"
+                                     style="background-image: url('data:image/jpeg;base64, {{ item['tour_img'] }}') ;"></div>
+                                <div class="ml-4">
+                                    <div class="mb-2 listing-author">
+                                        <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
+                                        <div class="ml-2"><b>HidethePain</b> is offering:</div>
+                                    </div>
+                                    <h1 class='title is-4'>{{ item.tour_name }}</h1>
+                                    <p class="subtitle is-6">{{ item.tour_brief }}</p>
+                                    <p class="has-text-weight-light is-size-3 has-text-dark"><small
+                                            class="is-size-5">From</small>
+                                        ${{ item.tour_price }}
+                                    </p>
+                                    <br>
+                                </div>
+                                <div class="buttons">
+                                    <a class="button is-white" style="color:rgb(73, 27, 35)"
+                                       href={{ url_for('favourites') }}><i
+                                            class="fas fa-heart"></i>&ensp;Add
+                                        to wishlist</a>
+                                    <a class="button is-white has-text-primary" href={{ url_for('all_bookings') }}><i
+                                            class="fas fa-arrow-right"></i>&ensp;Book
+                                        now</a>
+                                </div>
                             </div>
-                            <h1 class='title is-4'>{{ item.tour_name }}</h1>
-                            <p class="subtitle is-6">{{ item.tour_brief }}</p>
-                            <p class="has-text-weight-light is-size-3 has-text-dark"><small
-                                    class="is-size-5">From</small>
-                                ${{ item.tour_price }}
-                            </p>
-                            <br>
-                        </div>
-                        <div class="buttons">
-                            <a class="button is-white" style="color:rgb(73, 27, 35)" href={{ url_for('favourites') }}><i
-                                    class="fas fa-heart"></i>&ensp;Add
-                                to wishlist</a>
-                            <a class="button is-white has-text-primary" href={{ url_for('all_bookings') }}><i class="fas fa-arrow-right"></i>&ensp;Book
-                                now</a>
-                        </div>
+                            <!-- END: Vertical Card -->
+                        </a>
                     </div>
-                    <!-- END: Vertical Card -->
-                </a>
+                {% endfor %}
             </div>
-            {% endfor %}
-        </div>
 
-    </div>
-</section>
+        </div>
+    </section>
 {% endblock %}
