--- a/templates/helpdesk.html
+++ b/templates/helpdesk.html
@@ -65,7 +65,8 @@
                             <label class="label" for="support-img"></label>
                             <div class="file">
                                 <label class="file-label">
-                                    <input class="file-input" type="file" name="tour-img" onchange="if (this.files.length > 0) document.getElementById('filename-tour-img').innerHTML = this.files[0].name;">
+                                    <input class="file-input" type="file" name="tour-img"
+                                           onchange="if (this.files.length > 0) document.getElementById('filename-tour-img').innerHTML = this.files[0].name;">
                                     <span class="file-cta">
                             <span class="file-icon">
                                 <i class="fa fa-upload"></i>
